--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "frontend":"cd frontend && npm start",
+    "frontend":"cd frontend && npm run build",
     "backend":"cd Backend && npm run dev"
   },
   "repository": {
