--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "frontend":"npm install && cd frontend && npm run build",
-    "backend":"npm install && cd Backend && npm run dev"
+    "frontend":" cd frontend && npm install && npm run build",
+    "backend":"cd Backend && npm install && npm run dev"
   },
   "repository": {
     "type": "git",
